--- a/old website/Biology.html
+++ b/old website/Biology.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="img/79273283_2444145052360747_3415897806743797760_n.png">
-<title>Biologji</title>
+<title>Biology</title>
         <link rel="stylesheet" href="style.css">
 <body>
 <center>
